support cookies and authorization header
